Добавил кнопки купить

--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -147,6 +147,10 @@
                 навесного оборудования и&nbsp;т.д. Мы&nbsp;в&nbsp;Giant считаем, что единственный верный способ узнать точный вес
                 того или иного велосипеда&nbsp;&mdash; обратиться в&nbsp;ближайший магазин Giant.</p>
             </section>
+            <div class="btn-block">
+                <a href="#" class="btn">Купить</a>
+                <a href="#" class="btn">Купить в 1 клик</a>
+            </div>
         </main>
         <footer class="page-footer">
             <div class="container clearfix">
