--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -55,6 +55,10 @@
                     <h2>Описание товара</h2>
                     <p>Настоящий гоночный байк для настоящих гор!</p>
                 </section>
+                <div class="btn-block">
+                    <a href="#" class="btn">Купить</a>
+                    <a href="#" class="btn">Купить в 1 клик</a>
+                </div>
             </div>
             <section class="features description">
                 <h2>Характеристики товара</h2>
@@ -157,6 +161,10 @@
                 <p>Изысканная и&nbsp;улучшилось с&nbsp;тех пор, Мега превратилась в&nbsp;идеальный все горы и&nbsp;эндуро гонки на&nbsp;велосипеде. Доступные в&nbsp;настоящее время как &laquo;вариант на&nbsp;каждый день гонщиков, которые хотят выдвинуть свои пределы, и&nbsp;150&nbsp;мм 29&raquo; 160мм 27.5 вариант для тех, у&nbsp;кого есть аппетит к&nbsp;отъявленные скорости на&nbsp;любой местности.</p>
                 <p>Новые Mega команды уважают, и&nbsp;блюда из&nbsp;наград в&nbsp;spadefuls!</p>
             </section>
+            <div class="btn-block">
+                <a href="#" class="btn">Купить</a>
+                <a href="#" class="btn">Купить в 1 клик</a>
+            </div>
         </main>
         <footer class="page-footer">
             <div class="container clearfix">
