--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
             <p>В&nbsp;магазинах &laquo;BikeGang&raquo; работают высококвалифицированные специалисты, настоящие фанаты своего дела, которые и&nbsp;сами увлечены активным спортом, а&nbsp;потому отлично понимают ваши потребности и&nbsp;всегда знают, как помочь. Они с&nbsp;радостью проконсультируют вас, помогут выбрать любой товар и&nbsp;дадут советы по&nbsp;уходу за&nbsp;ним.</p>
             <h3>Специальные условия для клиентов магазина</h3>
             <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
+            <h3>Возможность заказать любой товар онлайн</h3>
+            <p>Заказывайте любой товар, который есть в&nbsp;наличии, даже не&nbsp;выходя из&nbsp;дома и&nbsp;оплачивайте любым удобным для вас способом. Наши менеджеры сами свяжутся с&nbsp;вами и&nbsp;ответят на&nbsp;все вопросы, а&nbsp;после оплаты заказа, тщательно упакуют ваш товар и&nbsp;отправят его в&nbsp;любую точку России!</p>
+<!--
+            <h2>Что же это за магазин такой?</h2>
+            <p>Магазин, на&nbsp;самом деле, необычный! Ты&nbsp;не&nbsp;найдешь здесь велосипеда &laquo;на&nbsp;выходные в&nbsp;парк&raquo;, на&nbsp;наших велосипедах не&nbsp;катаются &laquo;вокруг клумбы&raquo;. Ассортимент представлен отборный! Мы&nbsp;продаем велосипеды тем, кто не&nbsp;ищет компромиссов, тем, кому нужны качество и&nbsp;надежность. Наши клиенты&nbsp;&mdash; люди, которые имеют велосипеды &laquo;в&nbsp;хвост и&nbsp;в&nbsp;гриву&raquo; и&nbsp;не&nbsp;могут себе позволить слабое звено в&nbsp;конструкциях и&nbsp;механизмах!</p>
+            <h2>Чем мы не являемся?</h2>
+            <p>Важно, чтобы ты&nbsp;понимал, что мы&nbsp;не&nbsp;&laquo;еще один&raquo; веломагазин! Мы&nbsp;вообще можем тебе ничего не&nbsp;продать, если нам покажется ты&nbsp;не&nbsp;достоен нашего товара! Без обид, бро!</p>
+-->
         </main>
         <footer class="page-footer">
             <div class="container clearfix">
