--- a/contacts.html
+++ b/contacts.html
@@ -54,11 +54,15 @@
                     <button>Отправить</button>
                 </fieldset>
             </form>
-            <h2>Адрес</h2>
-            +7 (863) 290-80-70<br>
-            ул. 2-я Краснодарская 10, г. Ростов-на-Дону<br>
-            info@bikegang.ru
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=KZ06KogBmuO5fiy1vP2HIxlN6IRDv9g3&amp;width=100%&amp;height=374&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+            <section class="location">
+                <h2>Адрес</h2>
+                <div class="location-contacts">
+                    +7 (863) 290-80-70<br>
+                    ул. 2-я Краснодарская 10, г. Ростов-на-Дону<br>
+                    info@bikegang.ru
+                </div>
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=KZ06KogBmuO5fiy1vP2HIxlN6IRDv9g3&amp;width=100%&amp;height=374&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
+            </section>
         </main>
         <footer class="page-footer">
             <div class="container clearfix">
