Переделал хедер для страницы о нас

--- a/about-us.html
+++ b/about-us.html
@@ -10,11 +10,20 @@
 <body>
     <header class="page-header">
         <div class="container clearfix">
-            <div class="left-col">
-                <div class="logo">
+            <div class="row">
+                <div class="logo left-col">
                     <a href="index.html"><img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang"></a>
                 </div>
-                <nav class="main-menu">
+                <div class="social">
+                    <a class="social-btn social-btn-fb" href="#">facebook</a>
+                    <a class="social-btn social-btn-tw" href="#">twitter</a>
+                    <a class="social-btn social-btn-inst" href="#">instagram</a>
+                    <a class="social-btn social-btn-google" href="#">google</a>
+                    <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
+                </div>
+            </div>
+            <div class="row clearfix">
+                <nav class="main-menu left-col">
                     <ul>
                         <li>
                             <a href="index.html">Главная</a>
@@ -30,16 +39,7 @@
                         </li>
                     </ul>
                 </nav>
-            </div>
-            <div class="right-col">
-                <div class="social">
-                    <a class="social-btn social-btn-fb" href="#">facebook</a>
-                    <a class="social-btn social-btn-tw" href="#">twitter</a>
-                    <a class="social-btn social-btn-inst" href="#">instagram</a>
-                    <a class="social-btn social-btn-google" href="#">google</a>
-                    <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
-                </div>
-                <div class="user-block">
+                <div class="user-block right-col">
                     <a class="login" href="#">Вход</a>
                 </div>
             </div>
