--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <body>
         <header class="page-header">
             <div class="container clearfix">
-                <div class="left-col">
-                    <div class="logo">
+                <div class="row clearfix">
+                    <div class="logo left-col">
                         <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
                     </div>
-                </div>
-                <div class="right-col">
                     <div class="social">
                         <a class="social-btn social-btn-fb" href="#">facebook</a>
                         <a class="social-btn social-btn-tw" href="#">twitter</a>
@@ -23,7 +21,9 @@
                         <a class="social-btn social-btn-google" href="#">google</a>
                         <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
                     </div>
-                    <nav class="main-menu">
+                </div>
+                <div class="row clearfix">
+                    <nav class="main-menu left-col">
                         <ul>
                             <li>
                                 <a class="active-page" href="#">Главная</a>
@@ -32,13 +32,16 @@
                                 <a href="catalog.html">Каталог</a>
                             </li>
                             <li>
-                                <a href="contacts.html">Контакты</a>
+                                <a href="about-us.html">О нас</a>
                             </li>
                             <li>
-                                <a href="#">Вход</a>
+                                <a href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </nav>
+                    <div class="user-block right-col">
+                        <a class="login" href="#">Вход</a>
+                    </div>
                 </div>
             </div>
         </header>
