--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -11,12 +11,10 @@
     <body>
         <header class="page-header">
             <div class="container clearfix">
-                <div class="left-col">
-                    <div class="logo">
-                        <img src="../img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
+                <div class="row clearfix">
+                    <div class="logo left-col">
+                        <a href="../index.html"><img src="../img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang"></a>
                     </div>
-                </div>
-                <div class="right-col">
                     <div class="social">
                         <a class="social-btn social-btn-fb" href="#">facebook</a>
                         <a class="social-btn social-btn-tw" href="#">twitter</a>
@@ -24,7 +22,9 @@
                         <a class="social-btn social-btn-google" href="#">google</a>
                         <a class="social-btn social-btn-tumblr" href="#">tumblr</a>
                     </div>
-                    <nav class="main-menu">
+                </div>
+                <div class="row clearfix">
+                    <nav class="main-menu left-col">
                         <ul>
                             <li>
                                 <a href="../index.html">Главная</a>
@@ -33,13 +33,16 @@
                                 <a href="../catalog.html">Каталог</a>
                             </li>
                             <li>
-                                <a href="../contacts.html">Контакты</a>
+                                <a href="../about-us.html">О нас</a>
                             </li>
                             <li>
-                                <a href="#">Вход</a>
+                                <a href="../contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </nav>
+                    <div class="user-block right-col">
+                        <a class="login" href="#">Вход</a>
+                    </div>
                 </div>
             </div>
         </header>
