Добавил ссылку на "О нас" странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
                                 <a class="active-page" href="#">Каталог</a>
                             </li>
                             <li>
-                                <a href="#">О нас</a>
+                                <a href="about-us.html">О нас</a>
                             </li>
                             <li>
                                 <a href="contacts.html">Контакты</a>
