Добавил ссылки на регистрацию на все страницы

--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@
                             <a href="catalog.html">Каталог</a>
                         </li>
                         <li>
-                            <a class="active-page" href="#">О нас</a>
+                            <a class="active-page" href="registration.html">О нас</a>
                         </li>
                         <li>
                             <a href="contacts.html">Контакты</a>
@@ -40,7 +40,7 @@
                     </ul>
                 </nav>
                 <div class="user-block right-col">
-                    <a class="login" href="#">Вход</a>
+                    <a class="login" href="registration.html">Вход</a>
                 </div>
             </div>
         </div>
