--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
                                 <a href="index.html">Главная</a>
                             </li>
                             <li>
-                                <a class="active-page" href="#">Каталог</a>
+                                <a class="active-page" href="registration.html">Каталог</a>
                             </li>
                             <li>
                                 <a href="about-us.html">О нас</a>
@@ -40,7 +40,7 @@
                         </ul>
                     </nav>
                     <div class="user-block right-col">
-                        <a class="login" href="#">Вход</a>
+                        <a class="login" href="registration.html">Вход</a>
                     </div>
                 </div>
             </div>
