--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </ul>
                     </nav>
                     <div class="user-block right-col">
-                        <a class="login" href="#">Вход</a>
+                        <a class="login" href="registration.html">Вход</a>
                     </div>
                 </div>
             </div>
