--- a/contacts.html
+++ b/contacts.html
@@ -35,12 +35,12 @@
                                 <a href="about-us.html">О нас</a>
                             </li>
                             <li>
-                                <a class="active-page" href="#">Контакты</a>
+                                <a class="active-page" href="registration.html">Контакты</a>
                             </li>
                         </ul>
                     </nav>
                     <div class="user-block right-col">
-                        <a class="login" href="#">Вход</a>
+                        <a class="login" href="registration.html">Вход</a>
                     </div>
                 </div>
             </div>
