Добавил ссылку на главную на странице регистрации

--- a/registration.html
+++ b/registration.html
@@ -27,7 +27,7 @@
                     <nav class="main-menu left-col">
                         <ul>
                             <li>
-                                <a class="active-page" href="#">Главная</a>
+                                <a href="index.html">Главная</a>
                             </li>
                             <li>
                                 <a href="catalog.html">Каталог</a>
