Добавил ссылку на главную в логотипе на странице регистрации. Убрал рамки у кнопок

--- a/registration.html
+++ b/registration.html
@@ -13,7 +13,7 @@
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="logo left-col">
-                        <img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang">
+                        <a href="index.html"><img src="img/bikegang-logo-white.png" alt="Bike Gang logo" title="Bike Gang"></a>
                     </div>
                     <div class="social">
                         <a class="social-btn social-btn-fb" href="#">facebook</a>
