--- a/about-us.html
+++ b/about-us.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
 </head>
 <body>
+    <div class="box">
     <header class="page-header">
         <div class="container clearfix">
             <div class="row">
@@ -53,6 +54,7 @@
             <p>Важно, чтобы ты&nbsp;понимал, что мы&nbsp;не&nbsp;&laquo;еще один&raquo; веломагазин! Мы&nbsp;вообще можем тебе ничего не&nbsp;продать, если нам покажется ты&nbsp;не&nbsp;достоен нашего товара! Без обид, бро!</p>
       </div>
     </main>
+    </div>
     <footer class="page-footer">
         <div class="container clearfix">
             <div class="copyright">
