--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
     </head>
     <body>
+        <div class="box">
         <header class="page-header">
             <div class="container clearfix">
                 <div class="row clearfix">
@@ -56,6 +57,7 @@
                 <h3>Nukeproof Mega Team (2016)</h3>
             </a>
         </main>
+        </div>
         <footer class="page-footer">
             <div class="container clearfix">
                 <div class="copyright">
