Добавил курсор - поинтер кнопкам

--- a/registration.html
+++ b/registration.html
@@ -95,7 +95,7 @@
                     <label for="comments">Перечислите дополнительную информацию, которую вы хотели бы сообщить о себе</label>
                     <textarea id="comments"></textarea>                   
                 </fieldset>
-                <button class="btn" type="button">Зарегистрироваться</button>
+                <button class="btn" type="submit">Зарегистрироваться</button>
             </form>
         </main>
         <footer class="page-footer">
