Изменил тип кнопки регистрации (попытка №2)=)

--- a/contacts.html
+++ b/contacts.html
@@ -56,7 +56,7 @@
                     <input type="text" name="message-theme" placeholder="Тема обращения" required> <span class="required-symbol">*</span><br><br>
                     <textarea name="message" placeholder="Напишите ваше сообщение" required></textarea> <span class="required-symbol">*</span><br>
                     <i class="required-symbol-note">* - поля, обязательные для заполнения</i><br><br>
-                    <button>Отправить</button>
+                    <button type="submit">Отправить</button>
                 </fieldset>
             </form>
             <section class="location">
