Убрал required поля возраста

--- a/registration.html
+++ b/registration.html
@@ -80,7 +80,7 @@
                     <table class="registration-personal-info">
                         <tr class="registration-item">
                             <td class="item-label"><label for="age">Возраст</label></td>
-                            <td class="item-field"><input id="age" type="number" required min="14" max="100"></td>
+                            <td class="item-field"><input id="age" type="number" min="14" max="100"></td>
                         </tr>
                         <tr class="registration-item">
                             <td class="item-label"><label for="gender">Пол</label></td>
