--- a/index.html
+++ b/index.html
@@ -52,28 +52,24 @@
                   <source src="video/bikegang.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                   <source src="video/bikegang.webm" type='video/webm; codecs="vp8, vorbis"'>
                   <source src="video/bikegang.ogv" type='video/ogg; codecs="theora, vorbis"'>
-                </video>
-                <div class="right-col">
-                    <section class="intro-features">
-                        <h2>Не просто интернет магазин</h2>
-                        <ul>
-                          <li>Возврат в течение 365 дней</li>
-                          <li>Гарантия самой низкий цены после покупки</li>
-                          <li>Пожизненная гарантия</li>
-                          <li>Быстрая доставка</li>
-                          <li>365/7 онлайн поддержка</li>
-                        </ul>
-                    </section>
-                </div>
+                </video>               
+                <section class="intro-features right-col">
+                    <h2>Не просто интернет магазин</h2>
+                    <ul>
+                      <li>Возврат в течение 365 дней</li>
+                      <li>Гарантия самой низкий цены после покупки</li>
+                      <li>Пожизненная гарантия</li>
+                      <li>Быстрая доставка</li>
+                      <li>365/7 онлайн поддержка</li>
+                    </ul>
+                </section>
             </section>
             <section class="key-features">
                 <h2>Почему мы лучшие?</h2>
                 <section class="feature feature-1 clearfix">
                     <h3>Комплектующие от топовых производителей</h3>
-                    <div class="left-col">
-                        <img src="img/manufacturers.jpg" width="480px" height="257" alt="Manufacturer's list" title="Круто!">
-                    </div>
-                    <p>Мы&nbsp;являемся официальным дилером многих известных брендов, поставляющих запчасти, в&nbsp;том числе редкие и&nbsp;топовые. Поэтому в&nbsp;качестве и&nbsp;надежности нашего товара нет никаких сомнений.</p>
+                    <img class="left-col" src="img/manufacturers.jpg" width="48%" height="25,7%" alt="Manufacturer's list" title="Круто!">                
+                    <p class="right-col">Мы&nbsp;являемся официальным дилером многих известных брендов, поставляющих запчасти, в&nbsp;том числе редкие и&nbsp;топовые. Поэтому в&nbsp;качестве и&nbsp;надежности нашего товара нет никаких сомнений.</p>
                 </section>
                 <h3>Пожизненная гарантия</h3>
                 <p>Если вы&nbsp;покупаете велосипед в&nbsp;одном из&nbsp;наших магазинов, вы&nbsp;получаете пожизненную гарантию на&nbsp;раму. Например, если она треснула в&nbsp;момент использования, мы&nbsp;заменим её&nbsp;на&nbsp;новую, при этом все работы по&nbsp;снятию/установке комплектующих будут бесплатными.</p>
