Добавлена галерея новостей и плавный переход для эл-тов каталога.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,51 @@
                     </ul>
                 </section>
             </section>
+            <section class="news">
+                <h2>Новости</h2>
+                <article class="news-item">
+                    <a href="#">
+                        <img src="img/news.jpg" alt="News picture" class="item-image" width="100%" height="auto">
+                        <h1 class="item-heading">Чемпионат России по триалу. 13-14 августа</h1>
+                        <p class="item-intro">Мероприятие состоится в парке Авиаторов. Приходите, это главный старт сезона в России!</p>
+                    </a>
+                </article>               
+                <article class="news-item">
+                    <a href="#">
+                        <img src="" alt="" class="item-image">
+                        <h1 class="item-heading"></h1>
+                        <p class="item-intro"></p>
+                    </a>
+                </article>
+                <article class="news-item">
+                    <a href="#">
+                        <img src="" alt="" class="item-image">
+                        <h1 class="item-heading"></h1>
+                        <p class="item-intro"></p>
+                    </a>
+                </article>
+                <article class="news-item">
+                    <a href="#">
+                        <img src="" alt="" class="item-image">
+                        <h1 class="item-heading"></h1>
+                        <p class="item-intro"></p>
+                    </a>
+                </article>
+                <article class="news-item">
+                    <a href="#">
+                        <img src="" alt="" class="item-image">
+                        <h1 class="item-heading"></h1>
+                        <p class="item-intro"></p>
+                    </a>
+                </article>
+                <article class="news-item">
+                    <a href="#">
+                        <img src="" alt="" class="item-image">
+                        <h1 class="item-heading"></h1>
+                        <p class="item-intro"></p>
+                    </a>
+                </article>
+            </section>
         </main>
         <footer class="page-footer">
             <div class="container clearfix">
