Добавил всплывающую форму входа. Подключил скрипт popup. Задал картинку для кнопки входа.

--- a/registration.html
+++ b/registration.html
@@ -49,7 +49,7 @@
             </div>
         </header>
         <main class="container">
-            <h1>Регистрация</h1>
+            <h1 class="center-heading">Регистрация</h1>
             <form class="registration" action="/echo/html" method="post">
                 <p class="required-symbol-note">Пожалуйста, заполните форму регистрации пользователей. Обязательные поля помечены*</p>
                 <fieldset>
