Добавлен новый элемент каталога

--- a/catalog.html
+++ b/catalog.html
@@ -58,6 +58,10 @@
                 <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240" height="160">
                 <h3>Nukeproof Mega Team (2016)</h3>
             </a>
+            <a class="catalog-item" href="products/vitus-sommet-crx.html">
+              <img src="img/vitus-bikes-sommet-crx-2016.jpg" alt="Vitus Bikes Sommet CRX (2016)" width="240" height="auto">
+              <h3>Vitus Bikes Sommet CRX (2016)</h3>
+            </a>
         </main>
         </div>
         <footer class="page-footer">
