Добавил семантическую разметку для страницы "О нас"

--- a/about-us.html
+++ b/about-us.html
@@ -49,10 +49,12 @@
     </header>
     <main>
         <div class="container clearfix">
-            <h2>Что же это за магазин такой?</h2>
-            <p>Магазин, на&nbsp;самом деле, необычный! Ты&nbsp;не&nbsp;найдешь здесь велосипеда &laquo;на&nbsp;выходные в&nbsp;парк&raquo;, на&nbsp;наших велосипедах не&nbsp;катаются &laquo;вокруг клумбы&raquo;. Ассортимент представлен отборный! Мы&nbsp;продаем велосипеды тем, кто не&nbsp;ищет компромиссов, тем, кому нужны качество и&nbsp;надежность. Наши клиенты&nbsp;&mdash; люди, которые имеют велосипеды &laquo;в&nbsp;хвост и&nbsp;в&nbsp;гриву&raquo; и&nbsp;не&nbsp;могут себе позволить слабое звено в&nbsp;конструкциях и&nbsp;механизмах!</p>
-            <h2>Чем мы не являемся?</h2>
-            <p>Важно, чтобы ты&nbsp;понимал, что мы&nbsp;не&nbsp;&laquo;еще один&raquo; веломагазин! Мы&nbsp;вообще можем тебе ничего не&nbsp;продать, если нам покажется ты&nbsp;не&nbsp;достоен нашего товара! Без обид, бро!</p>
+            <section class="about-us">
+                <h2>Что же это за магазин такой?</h2>
+                <p>Магазин, на&nbsp;самом деле, необычный! Ты&nbsp;не&nbsp;найдешь здесь велосипеда &laquo;на&nbsp;выходные в&nbsp;парк&raquo;, на&nbsp;наших велосипедах не&nbsp;катаются &laquo;вокруг клумбы&raquo;. Ассортимент представлен отборный! Мы&nbsp;продаем велосипеды тем, кто не&nbsp;ищет компромиссов, тем, кому нужны качество и&nbsp;надежность. Наши клиенты&nbsp;&mdash; люди, которые имеют велосипеды &laquo;в&nbsp;хвост и&nbsp;в&nbsp;гриву&raquo; и&nbsp;не&nbsp;могут себе позволить слабое звено в&nbsp;конструкциях и&nbsp;механизмах!</p>
+                <h2>Чем мы не являемся?</h2>
+                <p>Важно, чтобы ты&nbsp;понимал, что мы&nbsp;не&nbsp;&laquo;еще один&raquo; веломагазин! Мы&nbsp;вообще можем тебе ничего не&nbsp;продать, если нам покажется ты&nbsp;не&nbsp;достоен нашего товара! Без обид, бро!</p>
+            </section>
             <section class="key-features">
                 <h2><a name="key-features">Почему мы лучшие?</a></h2>
                 <section class="feature feature-1 clearfix">
@@ -60,16 +62,26 @@
                     <img class="left-col" src="img/manufacturers.jpg" width="48%" height="auto" alt="Manufacturer's list" title="Круто!">                
                     <p class="right-col">Мы&nbsp;являемся официальным дилером многих известных брендов, поставляющих запчасти, в&nbsp;том числе редкие и&nbsp;топовые. Поэтому в&nbsp;качестве и&nbsp;надежности нашего товара нет никаких сомнений.</p>
                 </section>
-                <h3>Пожизненная гарантия</h3>
-                <p>Если вы&nbsp;покупаете велосипед в&nbsp;одном из&nbsp;наших магазинов, вы&nbsp;получаете пожизненную гарантию на&nbsp;раму. Например, если она треснула в&nbsp;момент использования, мы&nbsp;заменим её&nbsp;на&nbsp;новую, при этом все работы по&nbsp;снятию/установке комплектующих будут бесплатными.</p>
-                <h3>Бесплатный сервис</h3>
-                <p>Все велосипеды, лыжи и&nbsp;сноуборды, купленные в&nbsp;&laquo;BikeGang&raquo;, обслуживаются бесплатно в&nbsp;течение всего срока эксплуатации. Обращайтесь к&nbsp;нам с&nbsp;любой проблемой, и&nbsp;наши мастера исправят все дефекты качественно и&nbsp;быстро! Для ТО&nbsp;мы&nbsp;используем новейшее оборудование от&nbsp;известных производителей Park Tool и&nbsp;Wintersteiger.</p>
-                <h3>Профессиональная помощь</h3>
-                <p>В&nbsp;магазинах &laquo;BikeGang&raquo; работают высококвалифицированные специалисты, настоящие фанаты своего дела, которые и&nbsp;сами увлечены активным спортом, а&nbsp;потому отлично понимают ваши потребности и&nbsp;всегда знают, как помочь. Они с&nbsp;радостью проконсультируют вас, помогут выбрать любой товар и&nbsp;дадут советы по&nbsp;уходу за&nbsp;ним.</p>
-                <h3>Специальные условия для клиентов магазина</h3>
-                <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
-                <h3>Возможность заказать любой товар онлайн</h3>
-                <p>Заказывайте любой товар, который есть в&nbsp;наличии, даже не&nbsp;выходя из&nbsp;дома и&nbsp;оплачивайте любым удобным для вас способом. Наши менеджеры сами свяжутся с&nbsp;вами и&nbsp;ответят на&nbsp;все вопросы, а&nbsp;после оплаты заказа, тщательно упакуют ваш товар и&nbsp;отправят его в&nbsp;любую точку России!</p>
+                <section class="feature">
+                    <h3>Пожизненная гарантия</h3>
+                    <p>Если вы&nbsp;покупаете велосипед в&nbsp;одном из&nbsp;наших магазинов, вы&nbsp;получаете пожизненную гарантию на&nbsp;раму. Например, если она треснула в&nbsp;момент использования, мы&nbsp;заменим её&nbsp;на&nbsp;новую, при этом все работы по&nbsp;снятию/установке комплектующих будут бесплатными.</p>
+                </section>
+                <section class="feature">
+                    <h3>Бесплатный сервис</h3>
+                    <p>Все велосипеды, лыжи и&nbsp;сноуборды, купленные в&nbsp;&laquo;BikeGang&raquo;, обслуживаются бесплатно в&nbsp;течение всего срока эксплуатации. Обращайтесь к&nbsp;нам с&nbsp;любой проблемой, и&nbsp;наши мастера исправят все дефекты качественно и&nbsp;быстро! Для ТО&nbsp;мы&nbsp;используем новейшее оборудование от&nbsp;известных производителей Park Tool и&nbsp;Wintersteiger.</p>
+                </section>
+                <section class="feature">
+                    <h3>Профессиональная помощь</h3>
+                    <p>В&nbsp;магазинах &laquo;BikeGang&raquo; работают высококвалифицированные специалисты, настоящие фанаты своего дела, которые и&nbsp;сами увлечены активным спортом, а&nbsp;потому отлично понимают ваши потребности и&nbsp;всегда знают, как помочь. Они с&nbsp;радостью проконсультируют вас, помогут выбрать любой товар и&nbsp;дадут советы по&nbsp;уходу за&nbsp;ним.</p>
+                </section>
+                <section class="feature">
+                    <h3>Специальные условия для клиентов магазина</h3>
+                    <p>&laquo;Велобанда&raquo; любит и&nbsp;заботится о&nbsp;своих клиентах. Поэтому мы&nbsp;постоянно устраиваем акции и&nbsp;предоставляем особые условия нашим клиентам.</p>
+                </section>
+                <section class="feature">
+                    <h3>Возможность заказать любой товар онлайн</h3>
+                    <p>Заказывайте любой товар, который есть в&nbsp;наличии, даже не&nbsp;выходя из&nbsp;дома и&nbsp;оплачивайте любым удобным для вас способом. Наши менеджеры сами свяжутся с&nbsp;вами и&nbsp;ответят на&nbsp;все вопросы, а&nbsp;после оплаты заказа, тщательно упакуют ваш товар и&nbsp;отправят его в&nbsp;любую точку России!</p>
+                </section>
             </section>
       </div>
     </main>
