--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,76 @@
         <main class="catalog container clearfix">
             <h1>Каталог</h1>
             <div class="catalog-selector left-col">
-
+                <form action="/echo/html" method="post">
+                    <fieldset>
+                        <legend>Бренд</legend>
+                        <label>
+                            <input type="checkbox" value="Giant">
+                            <span class="marker-indicator"></span>
+                            Giant
+                        </label>
+                        <label>
+                            <input type="checkbox" value="Nukeproof">
+                            <span class="marker-indicator"></span>
+                            Nukeproof
+                        </label>
+                        <label>
+                            <input type="checkbox" value="Vitus Bikes">
+                            <span class="marker-indicator"></span>
+                            Vitus Bikes
+                        </label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Год выпуска</legend>
+                        <label>
+                            <input type="checkbox" value="2014">
+                            <span class="marker-indicator"></span>
+                            2014
+                        </label>
+                        <label>
+                            <input type="checkbox" value="2015">
+                            <span class="marker-indicator"></span>
+                            2015
+                        </label>
+                        <label>
+                            <input type="checkbox" value="2016">
+                            <span class="marker-indicator"></span>
+                            2016
+                        </label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Размер колес</legend>
+                        <label>
+                            <input type="checkbox" value="26">
+                            <span class="marker-indicator"></span>
+                            26
+                        </label>
+                        <label>
+                            <input type="checkbox" value="27.5">
+                            <span class="marker-indicator"></span>
+                            27.5 (650b)
+                        </label>
+                        <label>
+                            <input type="checkbox" value="29">
+                            <span class="marker-indicator"></span>
+                            29
+                        </label>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Материал рамы</legend>
+                        <label>
+                            <input type="checkbox" value="Аллюминий">
+                            <span class="marker-indicator"></span>
+                            Аллюминий
+                        </label>
+                        <label>
+                            <input type="checkbox" value="Карбон">
+                            <span class="marker-indicator"></span>
+                            Карбон
+                        </label>
+                    </fieldset>
+                    <button class="btn" type="button">Показать</button>
+                </form>
             </div>
             <div class="catalog-list right-col">
                 <a class="catalog-item" href="products/giant-reign-1.html">
