--- a/catalog.html
+++ b/catalog.html
@@ -123,15 +123,15 @@
             </div>
             <div class="catalog-list right-col">
                 <a class="catalog-item" href="products/giant-reign-1.html">
-                    <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="240" height="160">
+                    <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="100%" height="auto">
                     <h3>Giant Reign 1 (2016)</h3>
                 </a>
                 <a class="catalog-item" href="products/nukeproof-mega-team.html">
-                    <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="240" height="160">
+                    <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="100%" height="auto">
                     <h3>Nukeproof Mega Team (2016)</h3>
                 </a>
                 <a class="catalog-item" href="products/vitus-sommet-crx.html">
-                  <img src="img/vitus-bikes-sommet-crx-2016.jpg" alt="Vitus Bikes Sommet CRX (2016)" width="240" height="auto">
+                  <img src="img/vitus-bikes-sommet-crx-2016.jpg" alt="Vitus Bikes Sommet CRX (2016)" width="100%" height="auto">
                   <h3>Vitus Bikes Sommet CRX (2016)</h3>
                 </a>
             </div>
