--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
             <div class="catalog-list right-col">
                 <a class="catalog-item" href="products/giant-reign-1.html">
                     <img src="img/reign-275-1.jpg" alt="Giant Reign 1 (2016)" title="Giant Reign 1 (2016)" width="100%" height="auto">
-                    <h3>Giant Reign 1 (2016)</h3>
+                    <h3>Giant Reign&nbsp;1 (2016)</h3>
                 </a>
                 <a class="catalog-item" href="products/nukeproof-mega-team.html">
                     <img src="img/mega-275-team.jpg" alt="Nukeproof Mega Team (2016)" title="Nukeproof Mega Team (2016)" width="100%" height="auto">
