Способ подключения popup.js изменен на defer

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/media-queries.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
-        <script src="js/popup.js" async></script>
+        <script src="js/popup.js" defer></script>
     </head>
     <body>
         <header class="page-header">
