--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/media-queries.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="js/popup.js" async></script>
+        <script src="js/popup.js" defer></script>
     </head>
     <body>
         <header class="page-header">
