--- a/products/giant-reign-1.html
+++ b/products/giant-reign-1.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../css/media-queries.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ruslan+Display&subset=cyrillic" rel="stylesheet">
-        <script src="../js/popup.js" async></script>
+        <script src="../js/popup.js" defer></script>
     </head>
     <body>
         <header class="page-header">
