Исправил ошибку в ссылках меню. Поменял курсор активной страницы

--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
                             <a href="catalog.html">Каталог</a>
                         </li>
                         <li>
-                            <a class="active-page" href="registration.html">О нас</a>
+                            <a class="active-page" href="#">О нас</a>
                         </li>
                         <li>
                             <a href="contacts.html">Контакты</a>
