--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,7 @@
                                 <a href="about-us.html">О нас</a>
                             </li>
                             <li>
-                                <a class="active-page" href="registration.html">Контакты</a>
+                                <a class="active-page" href="#">Контакты</a>
                             </li>
                         </ul>
                     </nav>
