--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
                                 <a href="index.html">Главная</a>
                             </li>
                             <li>
-                                <a class="active-page" href="registration.html">Каталог</a>
+                                <a class="active-page" href="#">Каталог</a>
                             </li>
                             <li>
                                 <a href="about-us.html">О нас</a>
