Начата адаптация Nukeproof

--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../css/media-queries.css">
         <link href="https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic-ext" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Ruslan+Display&subset=cyrillic" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/popup.js" defer></script>
     </head>
     <body>
@@ -50,21 +51,17 @@
         </header>
         <main class="container">
             <h1>Nukeproof Mega 275 Team (2016)</h1>
-            <div class="left-col">
-                <a href="../img/mega-275-team.jpg" target="_blank">
-                    <img class="main-item-image" src="../img/mega-275-team.jpg" width="480px" height="320" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
-                </a>
-            </div>
-            <div class="right-col">
-                <section class="short-description description">
-                    <h2>Описание товара</h2>
-                    <p>Настоящий гоночный байк для настоящих гор!</p>
-                </section>
+            <a class="main-item-image" href="../img/mega-275-team.jpg" target="_blank">
+                <img src="../img/mega-275-team.jpg" width="100%" height="auto" alt="Nukeproof Mega 275 Team (2016)" title="Nukeproof Mega 275 Team (2016)">
+            </a>
+            <section class="short-description description">
+                <h2>Описание товара</h2>
+                <p>Настоящий гоночный байк для настоящих гор!</p>
                 <div class="btn-block">
                     <a href="#" class="btn">Купить</a>
                     <a href="#" class="btn">Купить в 1 клик</a>
                 </div>
-            </div>
+            </section>
             <section class="features description">
                 <h2>Характеристики товара</h2>
                 <ul>
