--- a/products/nukeproof-mega-team.html
+++ b/products/nukeproof-mega-team.html
@@ -89,10 +89,10 @@
             <section class="frame-geometry description">
                 <h2>Геометрия</h2>
                 <div class="frame-geometry-content">
-                    <div class="left-col">
-                        <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="480" height="334">
+                    <div class="geometry-content-image left-col">
+                        <img src="../img/geometry.png" alt="Геометрия рамы" title="Геометрия рамы" width="100%" height="auto">
                     </div>
-                    <div class="right-col">
+                    <div class="geometry-content-params right-col">
                         <table>
                             <tr>
                                 <th class="side-header double-header">Key</th>
