--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                 <h2>Новости</h2>
                 <article class="news-item">
                     <a href="#">
-                        <img src="img/news.jpg" alt="News picture" class="item-image" width="100%" height="auto">
+                        <img src="img/news.jpg" alt="Велотриал" class="item-image" width="100%" height="auto">
                         <h1 class="item-heading">Чемпионат России по триалу.<br>13-14 августа</h1>
                         <p class="item-intro">Мероприятие состоится в парке Авиаторов. Приходите, это главный старт сезона в России!</p>
                     </a>
                 </article>               
                 <article class="news-item">
                     <a href="#">
-                        <img src="" alt="" class="item-image">
-                        <h1 class="item-heading"></h1>
-                        <p class="item-intro"></p>
+                        <img src="img/news-2.jpg" alt="Карта события" class="item-image" width="100%" height="auto">
+                        <h1 class="item-heading">Байк-слет ВелоВесна&nbsp;2016</h1>
+                        <p class="item-intro">Весна неумолимо катит в&nbsp;сторону лета и&nbsp;у&nbsp;нас с&nbsp;вами нет никаких шансов остаться в&nbsp;стороне!</p>
                     </a>
                 </article>
                 <article class="news-item">
