Добавил еще одну новость

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>Новости</h2>
                 <article class="news-item">
                     <a href="#">
-                        <img src="img/news.jpg" alt="Велотриал" class="item-image" width="100%" height="auto">
+                        <img src="img/news.jpg" alt="News picture" class="item-image" width="100%" height="auto">
                         <h1 class="item-heading">Чемпионат России по триалу.<br>13-14 августа</h1>
                         <p class="item-intro">Мероприятие состоится в парке Авиаторов. Приходите, это главный старт сезона в России!</p>
                     </a>
